# module32_json

./: CMakeLists.txt  main.cpp  record.pb.cc  record.pb.h  record.proto
include/: movie_db.h
json/: moviedb.json
src/: CMakeLists.txt  main.cpp  movie.json  task1.cpp  task2.cpp
